@@ -19,13 +19,8 @@ if (is_array($_realurl_conf)) {
 	unset($_realurl_conf_file);
 }
 
-// Autoconfiguration
 define('TX_REALURL_AUTOCONF_FILE', 'typo3conf/realurl_autoconf.php');
-if ($_realurl_conf['enableAutoConf'] && !isset($GLOBALS['TYPO3_CONF_VARS']['EXTCONF']['realurl']) && !@include_once(PATH_site . TX_REALURL_AUTOCONF_FILE)) {
-	require_once(t3lib_extMgm::extPath('realurl', 'class.tx_realurl_autoconfgen.php'));
-	$_realurl_gen = t3lib_div::makeInstance('tx_realurl_autoconfgen');
-	$_realurl_gen->generateConfiguration();
-	unset($_realurl_gen);
+if (!isset($GLOBALS['TYPO3_CONF_VARS']['EXTCONF']['realurl'])) {
 	@include_once(PATH_site . TX_REALURL_AUTOCONF_FILE);
 }
 
